--- a/node_app/package.json
+++ b/node_app/package.json
@@ -2,6 +2,7 @@
   "name": "node_app",
   "version": "0.1.0",
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.2",
     "dependencies": "0.0.1",
     "express": "^4.16.2",
     "mongodb": "^2.2.33"
