--- a/node_app/package.json
+++ b/node_app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
+    "bootswatch": "^4.0.0-beta.2",
     "dependencies": "0.0.1",
     "express": "^4.16.2",
     "mongodb": "^2.2.33"
