--- a/node_app/package.json
+++ b/node_app/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "bootswatch": "^4.0.0-beta.2",
+    "chart.js": "^2.7.1",
     "dependencies": "0.0.1",
     "express": "^4.16.2",
     "mongodb": "^2.2.33"
