--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ node_app/.DS_Store
 node_app/.DS_Store
 node_app/.DS_Store
 node_app/www/js/datamaps/src/js/data
+node_app\www\js\datamaps\src\js\data
