--- a/node_app/package.json
+++ b/node_app/package.json
@@ -7,7 +7,8 @@
     "chart.js": "^2.7.1",
     "dependencies": "0.0.1",
     "express": "^4.16.2",
-    "mongodb": "^2.2.33"
+    "mongodb": "^2.2.33",
+    "pug": "^2.0.0-rc.4"
   },
   "scripts": {
     "start": "node server.js"
